Added img and most classes to the intro site

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <title>Tereza</title>
   </head>
   <body>
-    <h1>Tereza</h1>
-
-    <nav>
-      <ul>
-        <li>Úvod</li>
-        <li>O mně</li>
-        <li>Tvořím</li>
-        <li>Kontakt</li>
-      </ul>
-    </nav>
+    <header class="header">
+      <h1 class="title header__title">Tereza</h1>
+      <nav class="menu">
+        <ul>
+          <li class="menu__item">Úvod</li>
+          <li class="menu__item">O mně</li>
+          <li class="menu__item">Tvořím</li>
+          <li class="menu__item">Kontakt</li>
+        </ul>
+      </nav>
+  </header>
 
     <main>
+      <img src="images/rezba.jpg" alt="Řezba spící kotě">
         <p>Lorem ipsum dolor sit amet, 
             consectetuer adipiscing elit. 
             Phasellus rhoncus. 
@@ -30,6 +32,11 @@
             Nullam sapien sem, 
             </p>
     </main>
+
+    <footer class="footer">
+      <p>© Tereza</p>
+      <p>Code by KF</p>     
+    </footer>
 
   </body>
 </html>
